get fork to wsdl from url

--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,17 @@
             "email": "damian.murawski@bitbag.pl"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/damonsson/ElektronicznyNadawca"
+        }
+    ],
     "require": {
         "php": "^7.1",
         "sylius/sylius": "1.1.*",
         "bitbag/shipping-export-plugin": "^1.2",
-        "printu/elektroniczny-nadawca": "^1.0"
+        "printu/elektroniczny-nadawca": "dev-master"
     },
     "require-dev": {
         "phpspec/phpspec": "^3.2",
