--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php": "^7.1",
-        "sylius/sylius": "1.1.*",
+        "sylius/sylius": "^1.1",
         "bitbag/shipping-export-plugin": "^1.2",
         "printu/elektroniczny-nadawca": "dev-master"
     },
