--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,11 @@
     "name": "bitbag/poczta-polska-shipping-export-plugin",
     "type": "sylius-plugin",
     "description": "Poczta polska shipping export plugin for Sylius based applications.",
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "Damian Murawski",
-            "email": "damian.murawski@bitbag.pl"
-        }
+    "keywords": [
+        "sylius",
+        "sylius-plugin"
     ],
+    "license": "MIT",
     "repositories": [
         {
             "type": "vcs",
@@ -16,41 +14,51 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "sylius/sylius": "^1.4",
-        "bitbag/shipping-export-plugin": "^1.3",
-        "printu/elektroniczny-nadawca": "dev-master"
+        "php": "^7.4 || ^8.0",
+        "bitbag/shipping-export-plugin": "^1.5",
+        "printu/elektroniczny-nadawca": "dev-master",
+        "sylius/sylius": "^1.10",
+        "ext-soap": "*"
     },
     "require-dev": {
-        "behat/behat": "^3.4",
-        "behat/mink": "^1.7@dev",
-        "behat/mink-browserkit-driver": "^1.3",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-selenium2-driver": "^1.3",
+        "behat/behat": "^3.6.1",
+        "behat/mink-selenium2-driver": "^1.4",
+        "dmore/behat-chrome-extension": "^1.3",
+        "dmore/chrome-mink-driver": "^2.7",
+        "friends-of-behat/mink": "^1.8",
+        "friends-of-behat/mink-browserkit-driver": "^1.4",
+        "friends-of-behat/mink-debug-extension": "^2.0.0",
+        "friends-of-behat/mink-extension": "^2.4",
         "friends-of-behat/page-object-extension": "^0.3",
         "friends-of-behat/suite-settings-extension": "^1.0",
-        "friends-of-behat/symfony-extension": "^2.0",
-        "friends-of-behat/variadic-extension": "^1.1",
-        "lakion/mink-debug-extension": "^1.2.3",
-        "phpspec/phpspec": "^5.0",
-        "phpstan/phpstan-doctrine": "^0.10",
-        "phpstan/phpstan-shim": "^0.10",
-        "phpstan/phpstan-webmozart-assert": "^0.10",
-        "sensiolabs/security-checker": "^5.0",
-        "sylius-labs/coding-standard": "^2.0",
-        "symfony/browser-kit": "^3.4|^4.1",
-        "symfony/debug-bundle": "^3.4|^4.1",
-        "symfony/dotenv": "^4.2",
-        "symfony/intl": "^3.4|^4.1",
-        "symfony/web-profiler-bundle": "^3.4|^4.1",
-        "symfony/web-server-bundle": "^3.4|^4.1"
+        "friends-of-behat/symfony-extension": "^2.1",
+        "friends-of-behat/variadic-extension": "^1.3",
+        "friendsofsymfony/oauth-server-bundle": "^1.6 || >2.0.0-alpha.0 ^2.0@dev",
+        "phpspec/phpspec": "^7.0",
+        "phpstan/extension-installer": "^1.0",
+        "phpstan/phpstan": "0.12.99",
+        "phpstan/phpstan-doctrine": "0.12.33",
+        "phpstan/phpstan-strict-rules": "^0.12.0",
+        "phpstan/phpstan-webmozart-assert": "0.12.12",
+        "phpunit/phpunit": "^9.5",
+        "polishsymfonycommunity/symfony-mocker-container": "^1.0",
+        "sensiolabs/security-checker": "^6.0",
+        "sylius-labs/coding-standard": "^4.0",
+        "symfony/browser-kit": "^4.4 || ^5.2",
+        "symfony/debug-bundle": "^4.4 || ^5.2",
+        "symfony/dotenv": "^4.4 || ^5.2",
+        "symfony/intl": "^4.4 || ^5.2",
+        "symfony/web-profiler-bundle": "^4.4 || ^5.2",
+        "vimeo/psalm": "4.7.1"
     },
-    "conflict": {
-        "symfony/symfony": "4.1.8",
-        "symfony/browser-kit": "4.1.8",
-        "symfony/dependency-injection": "4.1.8",
-        "symfony/dom-crawler": "4.1.8",
-        "symfony/routing": "4.1.8"
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "phpstan/extension-installer": true,
+            "composer/package-versions-deprecated": true,
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "symfony/thanks": true
+        }
     },
     "prefer-stable": true,
     "autoload": {
@@ -60,6 +68,8 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["tests/Application/Kernel.php"]
+        "classmap": [
+            "tests/Application/Kernel.php"
+        ]
     }
 }
