--- a/tests/Application/config/services.yaml
+++ b/tests/Application/config/services.yaml
@@ -2,3 +2,6 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en_US
+
+services:
+    Symfony\Component\HttpKernel\Profiler\Profiler: '@profiler'
