--- a/tests/Behat/Resources/config/suites.yml
+++ b/tests/Behat/Resources/config/suites.yml
@@ -9,6 +9,7 @@ default:
                 - sylius.behat.context.setup.shipping
                 - bitbag.behat.context.setup.shipping_gateway
 
+                - sylius.behat.context.transform.lexical
                 - bitbag.poczta_polska_shipping_export_plugin.behat.context.ui.admin.shipping_gateway
             filters:
                 tags: "@managing_shipping_gateway_poczta_polska && @ui"
