--- a/src/Resources/config/services.yml
+++ b/src/Resources/config/services.yml
@@ -12,8 +12,12 @@ services:
             - '%bitbag.shipping_labels_path%'
             - '@bitbag.poczta_polska_shipping_export_plugin.api.web_client'
             - '@session.flash_bag'
+            - '@bitbag.poczta_polska_shipping_export_plugin.export_file_provider'
         tags:
             - { name: kernel.event_listener, event: 'bitbag.shipping_export.export_shipment', method: exportShipment }
 
     bitbag.poczta_polska_shipping_export_plugin.api.web_client:
         class: BitBag\SyliusPocztaPolskaShippingExportPlugin\Api\WebClient
+
+    bitbag.poczta_polska_shipping_export_plugin.export_file_provider:
+        class: BitBag\SyliusPocztaPolskaShippingExportPlugin\EventListener\ShippingExportEventListener\ShippingExportFileProvider
