--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,6 @@ name: Build
 
 on:
   push: ~
-  pull_request: ~
   release:
     types: [created]
 
@@ -138,6 +137,10 @@ jobs:
       -
         name: Validate database schema
         run: (cd tests/Application && bin/console doctrine:schema:validate)
+
+      -
+        name: Run PHPSpec
+        run: vendor/bin/phpspec run --ansi -f progress --no-interaction
 
       -
         name: Run Behat
