--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: [ "7.4", "8.0" ]
-        symfony: [ "^4.4", "^5.2" ]
-        sylius: [ "~1.10.0", "~1.11.0" ]
-        node: [ "10.x" ]
-        mysql: [ "8.0" ]
+        php: ["7.4", "8.0"]
+        symfony: ["^4.4", "^5.2"]
+        sylius: ["~1.10.0", "~1.11.0"]
+        node: [">=12.13.0"]
+        mysql: ["8.0"]
 
         exclude:
           - sylius: ~1.10.0
@@ -40,8 +40,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: "${{ matrix.php }}"
-          ini-values: date.timezone=Europe/Warsaw, opcache.enable=1, opcache.enable_cli=1, opcache.memory_consumption=256, opcache.max_accelerated_files=32531, opcache.interned_strings_buffer=8, opcache.validate_timestamps=0, opcache.save_comments=1, opcache.fast_shutdown=0
-          extensions: intl, gd, opcache, mysql, pdo_mysql, :xdebug
+          extensions: intl
           tools: symfony
           coverage: none
 
@@ -72,7 +71,7 @@ jobs:
 
       -
         name: Run Chrome Headless
-        run: google-chrome-stable --enable-automation --disable-background-networking --no-default-browser-check --no-first-run --disable-popup-blocking --disable-default-apps --allow-insecure-localhost --disable-translate --disable-extensions --disable-web-security --no-sandbox --enable-features=Metal --headless --remote-debugging-port=9222 --window-size=2880,1800 --proxy-server='direct://' --proxy-bypass-list='*' http://127.0.0.1 > /dev/null 2>&1 &
+        run: google-chrome-stable --enable-automation --disable-background-networking --no-default-browser-check --no-first-run --disable-popup-blocking --disable-default-apps --allow-insecure-localhost --disable-translate --disable-extensions --no-sandbox --enable-features=Metal --headless --remote-debugging-port=9222 --window-size=2880,1800 --proxy-server='direct://' --proxy-bypass-list='*' http://127.0.0.1 > /dev/null 2>&1 &
 
       -
         name: Run webserver
@@ -91,9 +90,22 @@ jobs:
           key: ${{ runner.os }}-php-${{ matrix.php }}-composer-${{ hashFiles('**/composer.json **/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-${{ matrix.php }}-composer-
+
+      -
+        name: Restrict Symfony version
+        if: matrix.symfony != ''
+        run: |
+          composer global require --no-progress --no-scripts --no-plugins "symfony/flex:^1.10"
+          composer config extra.symfony.require "${{ matrix.symfony }}"
+
+      -
+        name: Restrict Sylius version
+        if: matrix.sylius != ''
+        run: composer require "sylius/sylius:${{ matrix.sylius }}" --no-update --no-scripts --no-interaction
+
       -
         name: Install PHP dependencies
-        run: composer install --no-interaction
+        run: composer install --no-interaction --no-scripts
 
       -
         name: Get Yarn cache directory
@@ -108,20 +120,24 @@ jobs:
           key: ${{ runner.os }}-node-${{ matrix.node }}-yarn-${{ hashFiles('**/package.json **/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-node-${{ matrix.node }}-yarn-
+
       -
         name: Install JS dependencies
-        run: (cd tests/Application && yarn install)
+        run: |
+          (cd tests/Application && yarn install)
+          (cd tests/Application && yarn encore dev)
 
       -
         name: Prepare test application database
         run: |
           (cd tests/Application && bin/console doctrine:database:create -vvv)
           (cd tests/Application && bin/console doctrine:schema:create -vvv)
+
       -
         name: Prepare test application assets
         run: |
           (cd tests/Application && bin/console assets:install public -vvv)
-          (cd tests/Application && yarn build)
+
       -
         name: Prepare test application cache
         run: (cd tests/Application && bin/console cache:warmup -vvv)
@@ -145,3 +161,12 @@ jobs:
       -
         name: Run Behat
         run: vendor/bin/behat --colors --strict -vvv --no-interaction || vendor/bin/behat --colors --strict -vvv --no-interaction --rerun
+
+      -
+        name: Upload Behat logs
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: Behat logs
+          path: etc/build/
+          if-no-files-found: ignore
