--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^7.4 || ^8.0",
-        "bitbag/shipping-export-plugin": "^1.5 || ^1.7",
+        "bitbag/shipping-export-plugin": "^1.7",
         "printu/elektroniczny-nadawca": "dev-master",
         "sylius/sylius": "~1.10.0 || ~1.11.0",
         "ext-soap": "*"
