--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         php: ["7.4", "8.0"]
         symfony: ["^4.4", "^5.2"]
         sylius: ["~1.10.0", "~1.11.0"]
-        node: [">=12.13.0"]
+        node: [ "10.x" ]
         mysql: ["8.0"]
 
         exclude:
