--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -125,6 +125,7 @@ jobs:
         name: Install JS dependencies
         run: |
           (cd tests/Application && yarn install)
+          (cd tests/Application && yarn build)
 
       -
         name: Prepare test application database
