--- a/composer.json
+++ b/composer.json
@@ -57,7 +57,8 @@
             "phpstan/extension-installer": true,
             "composer/package-versions-deprecated": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "symfony/thanks": true
+            "symfony/thanks": true,
+            "symfony/flex": true
         }
     },
     "prefer-stable": true,
