--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,9 +14,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ["7.4", "8.0"]
+        php: ["8.0"]
         symfony: ["^4.4", "^5.2"]
-        sylius: ["~1.10.0", "~1.11.0"]
+        sylius: ["~1.11.0"]
         node: [ "10.x" ]
         mysql: ["8.0"]
 
